--- a/gui/create_filter_dialog.ui
+++ b/gui/create_filter_dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>CreateFilterDialog</class>
+ <widget class="QDialog" name="CreateFilterDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -64,6 +64,9 @@
      </property>
     </widget>
    </item>
+   <item row="4" column="1">
+    <widget class="QTextBrowser" name="textBrowser"/>
+   </item>
   </layout>
  </widget>
  <resources/>
@@ -71,7 +74,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>CreateFilterDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -87,7 +90,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>CreateFilterDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
